tests/NormalTests/paczka1/fuzzy1/94195746.err
Error in line 4: QszR21A6Cm S733 54,6
Error in line 7: QszR21A6Cm S3 96,4
Error in line 8: QszR21A6Cm S105 16,4
Error in line 19: 9ZBmO S3 48,3
Error in line 24: QszR21A6Cm S3 69,7
Error in line 28: QhvvIwH S733 76,9
Error in line 38: QszR21A6Cm S3 69,04
